SWT Core tests cleanup
Updating the SWT core tests so that less are failing.
Work includes:

- update of the reflection utils tests for the updated Java API
- Deletion of EnvironmentUtilsTest which pointed to specific developer
machines
- adding dispose calls for image tests to avoid non-disposed exceptions
- Using equals instead of same for test_getJavaProject
- disabling multiple tests via the DISABLED_ prefix
- fixes tests in StandardConvertersTest  which needs adjustments for
https://github.com/eclipse/windowbuilder/pull/229
- Also removes a bunch of <Java 8 tests in StandardConvertersTest